[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sjkabc"
dynamic = ['version']
license = {text = "BSD"}
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3'
]
dependencies = [ ]

[tool.setuptools.dynamic]
version = {attr = "sjkabc.__version__"}

[tool.pytest.ini_options]
testpaths = [
    'tests'
]
