[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sjkabc"
dynamic = ["version"]
license = {text = "BSD"}
authors = [
  { name="Svante Kvarnström", email="sjk@sjk.io" },
]
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3'
]
README = "README.rst"
dependencies = [ ]
description = "ABC music notation parsing library."

[project.urls]
Source = "https://github.com/sjktje/sjkabc"
Documentation = "https://readthedocs.org/projects/sjkabc/"

[tool.hatch.version]
path = "sjkabc/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    'tests'
]
